--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "del": "^3.0.0",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
+    "gulp-gcloud-publish": "^2.0.0",
     "gulp-template-util": "0.0.2",
     "path": "^0.12.7",
     "q": "^1.5.1"
