--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-gcloud-publish": "^2.0.0",
-    "gulp-template-util": "0.0.2",
     "path": "^0.12.7",
     "q": "^1.5.1"
+  },
+  "devDependencies": {
+    "gulp-cache": "^1.0.2",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-template-util": "0.0.2",
+    "imagemin-pngquant": "^5.1.0"
   }
 }
